# fastapi-project

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/versions/: 5919d3e77105_init.py
api/: completeblock_endpoints.py  contentblock_endpoints.py  courses_endpoints.py  sections_endpoints.py  studentcourse_endpoints.py  users.py  users_endpoints.py
db/: db_setup.py
db/models/: courses.py  user.py  users.py
schemas/: completeblock_schemas.py  contentblock_schemas.py  courses_schemas.py  sections_schemas.py  studen_course_schemas.py  user.py  users_schemas.py
services/: crud.py  security.py
services/crud/: base.py  completeblocks.py  contentblocks.py  courses.py  crud_completeblocks.py  crud_contentblocks.py  crud_courses.py  crud_sections.py  crud_studentcourses.py  crud_user.py  sections.py  studentcourses.py  users.py
