[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Sidorenko Daniil"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = {extras = ["standart"], version = "^0.18.3"}
ipython = "^8.5.0"
pydantic = "^1.10.2"
requests = "^2.28.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
